# hermes

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
build-debug/: Doxyfile  hermes
build-debug/docs/html/: annotated.html  classcybercritter_1_1MyApp-members.html  classcybercritter_1_1MyApp.html  classcybercritter_1_1MyApp__inherit__graph.md5  classcybercritter_1_1MyFrame-members.html  classcybercritter_1_1MyFrame.html  classcybercritter_1_1MyFrame__inherit__graph.md5  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.md5  inherits.html  md__projects_hermes_README.html  md__projects_hermes_docs_MarkdownFile.html  myapp_8h_source.html  myframe_8h_source.html  pages.html
build-debug/docs/html/search/: all_1.js  all_2.js  classes_0.js  pages_1.js  pages_2.js  searchdata.js
build-debug/docs/man/man3/: cybercritter_MyApp.3  cybercritter_MyFrame.3  md__projects_hermes_README.3  md__projects_hermes_docs_MarkdownFile.3
build-debug/test/: hermes_test
docs/: Doxyfile.in  mainpage.dox
src/: main.cpp  myapp.cpp  myapp.h  myframe.cpp  myframe.h
test/: CMakeLists.txt  gtest_validation.cpp
